[gd_scene load_steps=5 format=3 uid="uid://b3xgatcvmki5r"]

[ext_resource type="Script" path="res://src/scripts/Services/MultipleChoice.gd" id="1_dq7sl"]
[ext_resource type="StyleBox" uid="uid://c3kublerkkkwi" path="res://modern_button.tres" id="1_wmcjn"]
[ext_resource type="FontFile" uid="uid://v1atp56ihxgh" path="res://src/styles/official_font.tres" id="2_dshd0"]
[ext_resource type="StyleBox" uid="uid://bkusvee4u6aw0" path="res://src/styles/modern_button_pressed.tres" id="3_potgf"]

[node name="MultipleChoice" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dq7sl")

[node name="Question" type="RichTextLabel" parent="."]
layout_mode = 1
offset_left = 50.0
offset_top = 50.0
offset_right = 1870.0
offset_bottom = 400.0
theme_override_fonts/normal_font = ExtResource("2_dshd0")
theme_override_font_sizes/normal_font_size = 48
text = "This is for the question"
fit_content = true
scroll_active = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_left = 413.0
offset_top = 504.0
offset_right = 1613.0
offset_bottom = 964.0
theme_override_constants/separation = 20

[node name="OptionA" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = ExtResource("1_wmcjn")
theme_override_styles/hover = ExtResource("3_potgf")
theme_override_styles/pressed = ExtResource("3_potgf")
theme_override_styles/focus = ExtResource("3_potgf")
text = "A. "
alignment = 0

[node name="OptionB" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = ExtResource("1_wmcjn")
theme_override_styles/hover = ExtResource("3_potgf")
theme_override_styles/pressed = ExtResource("3_potgf")
theme_override_styles/focus = ExtResource("3_potgf")
text = "B. "
alignment = 0

[node name="OptionC" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = ExtResource("1_wmcjn")
theme_override_styles/hover = ExtResource("3_potgf")
theme_override_styles/pressed = ExtResource("3_potgf")
theme_override_styles/focus = ExtResource("3_potgf")
text = "C."
alignment = 0

[node name="OptionD" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = ExtResource("1_wmcjn")
theme_override_styles/hover = ExtResource("3_potgf")
theme_override_styles/pressed = ExtResource("3_potgf")
theme_override_styles/focus = ExtResource("3_potgf")
text = "D. "
alignment = 0

[connection signal="pressed" from="VBoxContainer/OptionA" to="." method="_on_option_a_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionB" to="." method="_on_option_b_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionC" to="." method="_on_option_c_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionD" to="." method="_on_option_d_pressed"]
